Update Fr CV with AgileDSS + RD

--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -24,7 +24,7 @@
 \ifpdf
 	\pdfinfo {
 		/Author (Nicolas REY)
-		/Title (Nicolas REY - Développeur Scala - Big Data)
+		/Title (Nicolas REY - Développeur Scala / Spark - Big Data)
 		% /Subject (SUBJECT)
 		% /Keywords (KEYWORDS)
 %		/CreationDate (D:20110109220854)
@@ -47,11 +47,11 @@
 
 \firstname{Nicolas}
 \familyname{Rey}
-\title{Développeur Scala - Big Data}
-\address{76 rue de l'Ouest}{75014 Paris}
+\title{Développeur Scala / Spark - Big Data}
+\address{74 rue Championnet}{75018 Paris}
 \mobile{+33 6 26 09 05 07}
-\email{nicolas.rey.3k.pro@gmail.com}
-% \extrainfo{29 ans, Célibataire, Permis voiture}
+\email{n.rey@lateral-thoughts.com}
+% \extrainfo{31 ans, Célibataire, Permis voiture}
 
 
 \begin{document}
@@ -59,6 +59,12 @@
 
 \vspace{1cm}
 \section{Formations}
+\cventry{Mars. 2018}{Formation Deep Learning}{Université de Montréal}{}{Montréal}{
+  \smallskip
+  Cette formation d’une semaine consistait en une grosse introduction au deep learning, les concepts
+mathématiques sous jacents, ainsi que plusieurs travaux pratiques.
+  \bigskip
+}
 \cventry{Sept. 2014}{Formation Apache Spark}{Lateral Thoughts}{}{Paris}{
   \smallskip
   \begin{itemize}
@@ -69,7 +75,7 @@
   \bigskip
 }
 \cventry{2008 - 2012}{École Centrale de Nantes - Option Informatique}{École d'ingénieur généraliste}{}{}{
-  L'École Centrale de Nantes est une école d'ingénieur reconnue par l'Ordre des ingénieurs du Québec. Le diplôme est équivalent à un \textit{Baccalauréat spécialisé de 4 ans} au Québec.
+  L'École Centrale de Nantes est une école d'ingénieur généraliste.
 }
 
 \vspace{0.5cm}
@@ -85,12 +91,11 @@
   \vspace{0.1cm}
   \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript, Bash (bases) \\ \vspace{0.1cm}
   \hspace{0.1cm} Ecosystème Big Data & \hspace{0.5cm} \textbf{Spark}, Kafka, HDFS, Cloudera Platform \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Akka (débutant) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Java & \hspace{0.5cm} Spring (MVC, Core) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Ecosystème Web & \hspace{0.5cm} ReactJS, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
+  \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Akka (bases) \\ \vspace{0.1cm}
   \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git \\ \vspace{0.1cm}
   \hspace{0.1cm} Bases de Données & \hspace{0.5cm} Cassandra, MongoDB \\ \vspace{0.1cm}
   \hspace{0.1cm} Administration & \hspace{0.5cm} GNU/Linux, Ansible, Docker, Vagrant \\ \vspace{0.1cm}
+	\hspace{0.1cm} Cloud Computing & \hspace{0.5cm} Microsoft Azure \\ \vspace{0.1cm}
 \end{tabular}
 
 
@@ -98,31 +103,82 @@
 \newpage
 \section{Expériences}
 % \cventry{}{}{}{}{}{}
-\cventry{2012 - 2017\\4,5 ans}{Ingénieur Développeur Scala/Java - Big Data}{Lateral Thoughts}{Paris}{}{
-  \small Prestations de développement
+\cventry{2018 - Auj\\2012 - 2017\\6 ans}{Ingénieur Développeur Scala/Spark - Big Data}{Lateral Thoughts}{Paris}{}{
+  \small Consultant spécialisé en développement \textbf{Scala}, \textbf{Spark}, et écosystèmes Big Data
   \medskip
+	\begin{itemize}
+		\item Conseil des clients par rapport à leurs besoins
+		\item Développement de solutions avec Scala, Spark, Kafka et autres outils de l'écosystème
+	\end{itemize}
+	\medskip
+  Lateral Thoughts est ce que l'on appelle aujourd'hui une "entreprise libérée"
+	\medskip
   \begin{itemize}
-    \item Société de services auto-organisée, sans chef ni hiérarchie
-    \item Gestion commune du fonctionnement et du développement de l'entreprise
-    \item Liberté totale pour ses employés
-    \item Fort sens des responsabilités
+    \item Pas de chef ni de hiérarchie. Complètement auto-organisée
+    \item Grande coopération, émulation et entraide entre employés
+    \item Une expertise en Scala, Spark, et le développement Big Data
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Java, \textbf{Spark}}
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Kafka, Cassandra, Hadoop, Scrum}
   \bigskip
 }
-\cventry{2016 - 2017\\7 mois}{Ingénieur Développeur Scala - Big Data}{Pages Jaunes}{Paris}{}{
-  \small Refonte des applications des données des audiences de Pages Jaunes avec Spark
+\cventry{2018 - Auj\\8 mois}{Ingénieur Développeur Scala/Spark - Big Data}{Renault Digital}{Paris}{France}{
+  \small Développement d'un outil de traçabilité des pièces et coûts de véhicules avec Scala et Spark. \\
+  \medskip
+  \begin{itemize}
+    \item Conseil sur l'architecture et les solutions techniques à mettre en œuvre
+    \item Implémentation avec Scala / Spark des cas d'usage métier (volumétrie env. 3 To)
+    \item Stockage des données dans HDFS, ElasticSearch et HBase
+    \item Développement des APIs pour exposer nos données avec Scala et Play2!
+    \item Pratique du Test Driven Development (TDD)
+    \item Rôle de devops pour outiller l'équipe et automatiser ce qui pouvait l'être
+  \end{itemize}
+  \medskip
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, HBase, ElasticSearch, HDP} \\
+  \textbf{Entreprise :} \textit{Renault Digital est une filiale du groupe Renault rassemblant les projets numériques}
+  \bigskip
+}
+\cventry{2017 - 2018\\11 mois}{Ingénieur Développeur Scala/Spark - Big Data}{agileDSS}{Montréal}{Canada}{
+  \small Conseiller \textbf{Scala / Spark / Big Data}. \\
+	J'ai également donné deux sessions de \textbf{formation Spark Core} chez Microsoft.
+	\medbreak
+	Pour les clients, mon rôle consistait en :
+	\medskip
+	\begin{itemize}
+		\item Les aider dans la définition de leur architecture Big Data
+		\item Implémentation avec Scala / Spark
+		\item Pratique stricte du Test Driven Development (TDD)
+		\item Formation de leurs employés sur Scala, Spark, et l'écosytème Big Data
+	\end{itemize}
+	\medskip
+  Pour l'agence, mon rôle consistait en :
+	\medskip
+  \begin{itemize}
+    \item Participer à l'évolution de la pratique Big Data
+    \item Choix des technos Big Data de référence
+    \item Faire passer la plupart des entretiens techniques de recrutement
+		\item Former des employés aux technos et à la pratique Big Data
+  \end{itemize}
+  \medskip
+  J'ai principalement travaillé avec Microsoft Azure par choix des clients.
+  \medbreak
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Microsoft Azure} \\
+	\textbf{Entreprise :} \textit{AgileDSS est une SSII spécialisée dans la BI et le conseil autour de la donnée}
+  \bigskip
+}
+\cventry{2016 - 2017\\7 mois}{Ingénieur Développeur Scala/Spark - Big Data}{Pages Jaunes}{Paris}{}{
+  \small Refonte de la solution de traitement des données d'audience avec Scala et Spark
   \medskip
   \begin{itemize}
     \item Développement de plusieurs applications d'ingestion et de valorisation de données
+		\item Unification du format en Avro et Parquet
     \item Mise en place de l'usine logicielle (Jenkins, Sonatype Nexus)
-    \item DevOps : gestion du déploiement (Ansible), et de l'exécution des pipelines d'applications
-    \item Formation de l'équipe aux pratiques Agile, à Scala et à Spark
+    \item DevOps : déploiement avec Ansible, pipeline de jobs avec Jenkins
+    \item Formation de l'équipe à Scala, Spark et aux pratiques Agile (SCRUM)
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, HDFS, Cloudera, Avro, Parquet} \\
-  \textbf{Gestion de projet :} \textit{Agile} \\
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, HDFS, Cloudera, Ansible, Avro, Parquet} \\
+  \textbf{Gestion de projet :} \textit{Agile / SCRUM} \\
   \textbf{Entreprise :} \textit{Pages Jaunes est un moteur de recherche de professionnels. Env. 5 millions d'utilisateurs quotidiens.}
   \bigskip
 }
@@ -130,15 +186,16 @@
   \small Développement de la plateforme data lake temps réel de Carrefour (pour la région France)
   \medskip
   \begin{itemize}
-    \item Ingestion dans Kafka de multiples sources de données
-    \item Traitement de la donnée avec Spark Streaming
+    \item Ingestion de multiples sources de données avec Kafka
+    \item Traitement de la donnée avec Spark Core et Spark Streaming
     \item Normalisation des données au format avro
-    \item Stockage des données dans HDFS et Cassandra 
-    \item Développement des API d'accès à ces données avec Spray
-    \item L'ensemble de la plate-forme est répartie entre un cluster Mesos et Cloudera
+    \item Persistance dans HDFS et Cassandra
+    \item Exposition des données par des APIs développées avec Spray
+		\item Déploiement avec Ansible
+    \item Plate-forme répartie sur un cluster Mesos et un cluster Cloudera
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
+  \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Ansible, Avro} \\
   \textbf{Entreprise :} \textit{Carrefour est un des leader de la grande distribution. 5600 magasins en France.}
   \bigskip
 }
@@ -146,9 +203,12 @@
 	\small Développement logiciel pour l'industrie du médicament
 	\medskip
   \begin{itemize}
-    \item Développement en Scala / Akka d'un outil de gestion de mises à jour d'un client lourd
-    \item Développement d'API RESTful HATEOAS sur une base de données de médicaments
+    \item Développement en Scala / Akka d'un outil de pilotage de mises à jour d'un client lourd
+    \item Développement d'APIs REST HATEOAS en Java pour exposer une base de données de médicaments
     \item Développement d'un projet de tests BDD en Cucumber
+		\item Pratique intensive du Test Driven Development (TDD)
+		\item Pair programming
+		\item Code reviews
   \end{itemize}
   \medskip
   \textbf{Environnement :} \textit{Scala, Java, Akka, Guava, Spring, Hibernate, Cucumber, Github, Docker} \\
@@ -160,51 +220,65 @@
 	\small Refonte de plusieurs portails de déclaration et de paiement
 	\medskip
   \begin{itemize}
-    \item Développement backend en Java, Spring, et utilisation intensive de Guava
-    \item Développement frontend en JavaScript et ReactJS
-    \item Écriture de tests d'interfaces avec Fluentlenium
-    \item Conception d'un tampon avec RabbitMQ masquant l'indisponibilité du système d'information interne
+    \item Serveur développé en Java avec Sprink et beaucoup de Guava
+    \item Interface Web utilisant JavaScript et ReactJS
+    \item Test d'interfaces avec Fluentlenium
+    \item Développement avec RabbitMQ d'un outil asynchrone pour supporter l'indisponibilité de la BDD
+		\item Utilisation de Gitlab et Jenkins pour la gestion du code
   \end{itemize}
   \medskip
   \textbf{Environnement Backend :} \textit{Java, Guava, Spring, Fluentlenium} \\
   \textbf{Environnement Frontend :} \textit{JavaScript, ReactJS} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
-  \textbf{Entreprise :} \textit{La SACEM est la société de collecte et de redistribution des droits d'auteur sur la musique en France.}
+  \textbf{Entreprise :} \textit{La SACEM est la société de collecte des droits d'auteur sur la musique en France.}
   \bigskip
 }
 \cventry{2013\\7 mois}{Ingénieur Développeur Scala}{FONTYOU}{Paris}{}{
-	\small Développement d'une web app de co-création de polices pour une startup
+	\small Développement d'une web app de co-création de polices pour une startup. \\
+	Rôle très polyvalent car une équipe de seulement deux développeurs.
 	\medskip
   \begin{itemize}
     \item Développement des API en Scala, Play2!, MongoDB
-    \item Développement du front en JavaScript / BackboneJS, intégration HTML5/CSS3
-    \item Administration système, gestion de l'usine logicielle et de la prod
-    \item Développement d'un POC d'un logiciel de dessin vectoriel dans le navigateur
+    \item Développement de l'interface avec JavaScript, BackboneJS, CSS3
+    \item Admin Sys de l'usine logicielle et de l'environnement de prod
+    \item Développement d'un POC de dessin vectoriel dans le navigateur
   \end{itemize}
   \medskip
   \textbf{Environnement Backend :} \textit{\textbf{Scala}, Play2!, MongoDB, Zabbix} \\
   \textbf{Environnement Frontend :} \textit{JavaScript, BackboneJS, RequireJS, HTML5/CSS3, LessCSS} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
-  \textbf{Entreprise :} \textit{Fontyou est une startup qui, à l'époque où je travaillais là bas, construisait une plate-forme de co-création de polices de caractères.}
+  \textbf{Entreprise :} \textit{Fontyou est une startup qui travaillait à l'époque à développer une plate-forme de co-création de polices de caractères.}
   \bigskip
 }
-\cventry{}{Références sur demande}{}{}{}{}
-% \cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
-% 	\small Développement d'un client lourd
-% 	\medskip
-%   \begin{itemize}
-%     \item Développement d'un système de notification installé chez les clients
-%     \item Gestion de l'expiration et du renouvellement de la license des clients
-%   \end{itemize}
-%   \medskip
-%   \textbf{Environnement :} \textit{\textbf{Scala}, Akka, SWT, JavaScript, HTML/CSS} \\
-%   \textbf{Gestion de projet :} \textit{Agile / Scrum}
-%   \bigskip
-% }
-% \cventry{Nov. 2012\\1 mois}{Développement d'APIs REST HATEOAS}{Vidal}{Paris}{}{
-% 	Java, Spring, Hibernate, protocole ATOM. TDD avec JUnit, Mockito.\\
-% 	Méthodes AGILE : SCRUM.
-% }
+\cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala/Java}{Vidal}{Paris}{}{
+	\small Développement d'un client lourd
+	\medskip
+  \begin{itemize}
+    \item Développement d'un système de notification installé chez les clients
+    \item Gestion de l'expiration et du renouvellement de la license des clients
+    \item Modélisation du cycle de vie des mises à jour avec une machine à état fini implémentée avec Akka
+		\item Développement d'APIs REST HATEOAS en Java pour exposer une base de données de médicaments
+  \end{itemize}
+  \medskip
+  \textbf{Environnement :} \textit{\textbf{Scala}, Java, Akka, SWT, JavaScript, HTML/CSS} \\
+  \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
+  \textbf{Entreprise :} \textit{Vidal édite une base de données de médicaments. Leader français de ce domaine.}
+  \bigskip
+}
+%\cventry{Nov. 2012\\1 mois}{Ingénieur Développeur Java}{Vidal}{Paris}{}{
+%        \small Développement d'APIs REST HATEOAS
+%	\medskip
+%  \begin{itemize}
+%    \item Développement et intégration de règles métier sur des données médicales
+%    \item Exposition de ces données par des APIs REST HATEOS suivant le protocole ATOM
+%  \end{itemize}
+%  \medskip
+%  \textbf{Environnement :} \textit{Java, Spring, Hibernate, protocole ATOM. TDD avec JUnit, Mockito.} \\
+%  \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
+%  \textbf{Entreprise :} \textit{Vidal édite une base de données de médicaments. Leader français de ce domaine.}
+%  \bigskip
+%}
+% \cventry{}{Références sur demande}{}{}{}{}
 % \cventry{Avril - Sept. 2012\\6 mois}{Stage de fin d'études - Développement Web/Mobile}{Eklaweb}{Nantes}{}{
 %   Développement d'applications mobiles HTML5 avec Backbone.js.\\
 %   Serveur : Scala, Unfiltered, Play2!, MongoDB, PostgreSQL.\\
@@ -221,12 +295,20 @@
 
 \newpage
 \section{Projets personnels}
-\cventry{2017}{HDFS Compactor}{En cours...}{}{}{
-  \small Outil visant à réunir des petits fichiers en un plus gros fichier afin de minimiser le nombre de blocs HDFS et d'optimiser la lecture. Format supportés : Parquet, Avro, CSV compressé en GZip.
+\cventry{2019}{Spark Tools}{}{}{}{
+  \small Développement d'un SourceManager pour abstraire la lecture/écriture de source et la création d'une table Hive. Ajoute plusieurs SaveMode très pratiques.
   \bigskip
 }
-\cventry{2017}{Image Docker pour TaigaIO}{En cours...}{}{}{
+\cventry{2018}{Slack Notifier}{}{}{}{
+  \small Développement d'un outil de notification Slack spécialisé pour les jobs Spark.
+  \bigskip
+}
+\cventry{2017}{Image Docker pour TaigaIO}{}{}{}{
   \small Création d'une image Docker pour le logiciel \textit{taiga.io}. Taiga est un outil simplifié de gestion de tâches orienté méthodes Agile.
+  \bigskip
+}
+\cventry{2017}{Image Docker pour Azkaban}{}{}{}{
+  \small Création d'une image Docker pour le logiciel \textit{Azkaban}. Azkban est un gestionnaire de workflow pratique développé par LinkedIn.
   \bigskip
 }
 \cventry{2015}{Serveur Personnel}{}{}{}{
@@ -239,9 +321,9 @@
 }
 
 \section{Centres d'intérêt}
-\cvline{Informatique}{Logiciels libres, programmation fonctionnelle.}
-\cvline{Loisirs}{Salsa et autres danses, Veille technologique, Photographie.}
-\cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (11 pays), 4 mois en Inde.}
+\cvline{Informatique}{Logiciels libres, Big Data.}
+\cvline{Loisirs}{Salsa et autres danses, Photographie, Géopolitique, Bonnes pitances...}
+\cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (11 pays), 4 mois en Inde, 1 an à Montréal.}
 
 \closesection{}                   % needed to renewcommands
 \renewcommand{\listitemsymbol}{-} % change the symbol for lists
