Fr & Eng CV up to date !

--- a/CV_En_Nicolas_REY.tex
+++ b/CV_En_Nicolas_REY.tex
@@ -24,7 +24,7 @@
 \ifpdf
 	\pdfinfo {
 		/Author (Nicolas REY)
-		/Title (Nicolas REY - Scala Developer - Big Data)
+		/Title (Nicolas REY - Scala / Spark Developer - Big Data)
 		% /Subject (SUBJECT)
 		% /Keywords (KEYWORDS)
 %		/CreationDate (D:20110109220854)
@@ -47,10 +47,10 @@
 
 \firstname{Nicolas}
 \familyname{Rey}
-\title{Scala Developer - Big Data}
-\address{76 rue de l'Ouest}{75014 Paris}
+\title{Scala / Spark Developer - Big Data}
+\address{74 rue Championnet}{75018 Paris}
 \mobile{+33 6 26 09 05 07}
-\email{nicolas.rey.3k.pro@gmail.com}
+\email{n.rey@lateral-thoughts.com}
 % \extrainfo{29 ans, Single, Permis voiture}
 
 
@@ -59,6 +59,12 @@
 
 \vspace{1cm}
 \section{Education}
+\cventry{March 2018}{Deep Learning Training}{University of Montreal}{}{Montreal}{
+  \smallskip
+  This one week training consisted in a big introduction to deep learnig, the mathematical concepts behind it,
+as well as several practical works.
+  \bigskip
+}
 \cventry{Sept. 2014}{Spark Training}{Lateral Thoughts}{}{Paris}{
   \smallskip
   \begin{itemize}
@@ -69,13 +75,13 @@
   \bigskip
 }
 \cventry{2008 - 2012}{École Centrale de Nantes - Software engineering specialization}{Generalist engineering school}{}{}{
-  The \textit{École Centrale de Nantes} is a well known French engineering school recognized by the \textit{Ordre des ingénieurs du Québec}. The degree delivered is equivalent to a \textit{4 years specialized Baccalaureat} in Quebec.
+  The \textit{École Centrale de Nantes} is a well known French engineering school. It delivers a very wide ranging curriculum.
 }
 
 \vspace{0.5cm}
 \section{Languages}
 \cvlanguage{French}{Native}{}
-\cvlanguage{English}{Fluent (ToEIC : 885), working in English}{}
+\cvlanguage{English}{Fluent (ToEIC : 885)}{Working in English, internship in India (4 months), South-Africa (6 stays)}
 \cvlanguage{Spainish}{Notions}{}
 \cvlanguage{Russian}{Notions}{}
 
@@ -84,13 +90,12 @@
 \begin{tabular}{ll}
   \vspace{0.1cm}
   \hspace{0.1cm} Languages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript, Bash (basics) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Big Data ecosystem & \hspace{0.5cm} Spark, Kafka, HDFS, Cloudera \\ \vspace{0.1cm}
+  \hspace{0.1cm} Big Data ecosystem & \hspace{0.5cm} \textbf{Spark}, Kafka, HDFS, Cloudera \\ \vspace{0.1cm}
   \hspace{0.1cm} Scala ecosystem & \hspace{0.5cm} Play 2!, Akka (basics) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Java ecosystem & \hspace{0.5cm} Spring (MVC, Core) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Web ecosystem & \hspace{0.5cm} ReactJS, Bootstrap, HTML5/CSS3 \\ \vspace{0.1cm}
-  \hspace{0.1cm} Code management & \hspace{0.5cm} SBT, Maven, Jenkins, Git \\ \vspace{0.1cm}
-  \hspace{0.1cm} Data bases & \hspace{0.5cm} Cassandra, MongoDB \\ \vspace{0.1cm}
+  \hspace{0.1cm} Code management & \hspace{0.5cm} SBT, Maven, Jenkins, Git, GitlabCI \\ \vspace{0.1cm}
+  \hspace{0.1cm} Data bases & \hspace{0.5cm} Cassandra, MongoDB, HBase (basics) \\ \vspace{0.1cm}
   \hspace{0.1cm} System & \hspace{0.5cm} GNU/Linux, Ansible, Docker, Vagrant \\ \vspace{0.1cm}
+  \hspace{0.1cm} Cloud Computing & \hspace{0.5cm} Microsoft Azure \\ \vspace{0.1cm}
 \end{tabular}
 
 
@@ -98,20 +103,70 @@
 \newpage
 \section{Experiences}
 % \cventry{}{}{}{}{}{}
-\cventry{2012 - 2017\\4,5 ans}{Scala/Java Software Engineer - Big Data}{Lateral Thoughts}{Paris}{}{
-  \small Development services. I have been working there since I finished my studies.
+\cventry{2018 - Today\\2012 - 2017\\6 years}{Scala/Java Software Engineer - Big Data}{Lateral Thoughts}{Paris}{}{
+  \small Consultant specialized in \textbf{Scala}, \textbf{Spark} development, and Big Data ecosystems.
   \medskip
   \begin{itemize}
-    \item Self organized development services company, with no chief nor hierarchy
-    \item The running and development of the company is handled by every employee
-    \item Total freedom of the employees
-    \item High sense of responsabilities
+    \item Advise clients regarding their needs
+    \item Implementing solutions using Scala, Spark, Kafka and other tools in the ecosystem
   \end{itemize}
   \medskip
-  \textbf{Environment :} \textit{\textbf{Scala}, Java, \textbf{Spark}}
+  Lateral Thoughts is what we today call a "freedom-form company"
+  \medskip
+  \begin{itemize}
+    \item No chief nor hierarchy. Fully self organized
+    \item Great cooperation, emulation et mutual aid between employees
+    \item An expertise in Scala, Spark, and Big Data development
+  \end{itemize}
+  \medskip
+  \textbf{Environment :} \textit{\textbf{Scala}, \textbf{Spark}, Kafka, Cassandra, Hadoop, Scrum}
   \bigskip
 }
-\cventry{2016 - 2017\\7 mois}{Scala Software Engineer - Big Data}{Pages Jaunes}{Paris}{}{
+\cventry{2018 - Today\\8 months}{Scala/Spark Software Engineer - Big Data}{Renault Digital}{Paris}{France}{
+  \small Development of a tool to trace parts, components and costs of cars with Scala and Spark. \\
+  \medskip
+  \begin{itemize}
+    \item Advising about the architecture and technical solutions
+    \item Implementation of the data processing using Scala / Spark (about 3 TB of volume)
+    \item Data storage in HDFS, ElasticSearch and HBase
+    \item Implementation of the APIs to expose our data using Scala / Play2!
+    \item Practice of Test Driven Development (TDD)
+    \item Devops role aswell to improve deployment, scheduling, code quality and monitoring of our apps
+  \end{itemize}
+  \medskip
+  \textbf{Environment :} \textit{\textbf{Scala}, \textbf{Spark}, HBase, ElasticSearch, HDP} \\
+  \textbf{Company :} \textit{Renault Digital is a subsidiary of the Renault group gathering digital projects}
+  \bigskip
+}
+\cventry{2017 - 2018\\11 months}{Scala/Spark Advisor - Big Data}{agileDSS}{Montréal}{Canada}{
+  \small \textbf{Scala / Spark / Big Data} advisor. \\
+  I also gave two sessions of Spark Core training at Microsoft.
+  \medbreak
+  For my clients, my role consisted in :
+  \medskip
+  \begin{itemize}
+    \item Helping them in the design of their Big Data architecture
+    \item Implementing using Scala / Spark
+    \item Strict practice of Test Driven Development (TDD)
+    \item Training their employees in Scala, Spark, and the Big Data ecosystem
+  \end{itemize}
+  \medskip
+  For the agency, mon role consisted in :
+  \medskip
+  \begin{itemize}
+    \item Getting involved in the development of the Big Data practice
+    \item Choosing the Big Data technology of reference
+    \item Running most of the technical recruitment interviews
+    \item Training employees to the Big Data practice and technologies
+  \end{itemize}
+  \medskip
+  I have mostly worked with with Microsoft because of clients' choices.
+  \medbreak
+  \textbf{Environment :} \textit{\textbf{Scala}, \textbf{Spark}, Microsoft Azure} \\
+  \textbf{Company :} \textit{AgileDSS is IT services company specialized in BI and advise around data}
+  \bigskip
+}
+\cventry{2016 - 2017\\7 months}{Scala/Spark Software Engineer - Big Data}{Pages Jaunes}{Paris}{}{
   \small Redesign the applications regarding audience data of Pages Jaunes with Spark
   \medskip
   \begin{itemize}
@@ -126,7 +181,7 @@
   \textbf{Company :} \textit{Pages Jaunes is a search engine of professionals. About 5 millions daily users.}
   \bigskip
 }
-\cventry{2015 - 2016\\10 mois}{Scala Software Engineer - Big Data}{Carrefour}{Paris}{}{
+\cventry{2015 - 2016\\10 months}{Scala Software Engineer - Big Data}{Carrefour}{Paris}{}{
   \small Development of the real time data lake for Carrefour
   \medskip
   \begin{itemize}
@@ -142,7 +197,7 @@
   \textbf{Company :} \textit{Carrefour is a major big distribution company. 5600 retail stores in France.}
   \bigskip
 }
-\cventry{2014 - 2015\\1 an}{Scala/Java Software Engineer}{Vidal}{Paris}{}{
+\cventry{2014 - 2015\\1 year}{Scala/Java Software Engineer}{Vidal}{Paris}{}{
 	\small Software development for the medical drug industry
 	\medskip
   \begin{itemize}
@@ -156,7 +211,7 @@
   \textbf{Company :} \textit{Vidal is the French leader of medical drug data.}
   \bigskip
 }
-\cventry{2014\\9 mois}{Java Software Engineer}{SACEM}{Paris}{}{
+\cventry{2014\\9 months}{Java Software Engineer}{SACEM}{Paris}{}{
 	\small Redesign of several declaration and payment web sites
 	\medskip
   \begin{itemize}
@@ -173,7 +228,7 @@
   \textbf{Company :} \textit{SACEM is the company in charge of collecting and redistributing music copyrights in France.}
   \bigskip
 }
-\cventry{2013\\7 mois}{Scala Software Engineer}{FONTYOU}{Paris}{}{
+\cventry{2013\\7 months}{Scala Software Engineer}{FONTYOU}{Paris}{}{
 	\small Development of a web application dealing with font co-creation
 	\medskip
   \begin{itemize}
@@ -189,8 +244,8 @@
   \textbf{Company :} \textit{Fontyou is a startup which at the time was working on a social network of font co-creation.}
   \bigskip
 }
-\cventry{}{References on demand}{}{}{}{}
-% \cventry{2012 - 2013\\7 mois}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
+% \cventry{}{References on demand}{}{}{}{}
+% \cventry{2012 - 2013\\7 months}{Ingénieur Développeur Scala}{Vidal}{Paris}{}{
 % 	\small Développement d'un client lourd
 % 	\medskip
 %   \begin{itemize}
@@ -202,16 +257,16 @@
 %   \textbf{Gestion de projet :} \textit{Agile / Scrum}
 %   \bigskip
 % }
-% \cventry{Nov. 2012\\1 mois}{Développement d'APIs REST HATEOAS}{Vidal}{Paris}{}{
+% \cventry{Nov. 2012\\1 months}{Développement d'APIs REST HATEOAS}{Vidal}{Paris}{}{
 % 	Java, Spring, Hibernate, protocole ATOM. TDD avec JUnit, Mockito.\\
 % 	Méthodes AGILE : SCRUM.
 % }
-% \cventry{Avril - Sept. 2012\\6 mois}{Stage de fin d'études - Développement Web/Mobile}{Eklaweb}{Nantes}{}{
+% \cventry{Avril - Sept. 2012\\6 months}{Stage de fin d'études - Développement Web/Mobile}{Eklaweb}{Nantes}{}{
 %   Développement d'applications mobiles HTML5 avec Backbone.js.\\
 %   Serveur : Scala, Unfiltered, Play2!, MongoDB, PostgreSQL.\\
 %   Article sur le blog technique d'Eklaweb : "Gestion des dates en informatique".
 % }
-% \cventry{Mai à août 2011\\4 mois}{Stage ingénieur en développement mobile}{Amadeus}{Bangalore}{Inde}{
+% \cventry{Mai à août 2011\\4 months}{Stage ingénieur en développement mobile}{Amadeus}{Bangalore}{Inde}{
 %   Application iPad pour valider la maturité du développement mobile HTML5.\\
 %   Utilisation importante de JavaScript (jQuery), PhoneGap, HTML5, CSS3 et SQLite.\\
 %   Web scraping d'un site avec un script Python.
@@ -222,12 +277,20 @@
 
 \newpage
 \section{Personal projects}
-\cventry{2017}{HDFS Compactor}{In progress...}{}{}{
-  \small Tool aiming at gathering small files into bigger ones in order to minimize the number of HDFS blocks and to optimize the reading of data. Supported formats : Parquet, Avro, CSV compressed in GZip.
+\cventry{2019}{Spark Tools}{}{}{}{
+  \small Development of a SourceManager to abstract the reading/writing of sources and the creation of a Hive table. Adds several very useful SaveMode.
   \bigskip
 }
-\cventry{2017}{Docker image for TaigaIO}{In progress...}{}{}{
+\cventry{2019}{Slack Notifier for Yarn projects}{}{}{}{
+  \small Development of a simple notification tool implementing the Slack Incoming Webhooks API, and specialized to post status of applications.
+  \bigskip
+}
+\cventry{2017}{Docker image for TaigaIO}{}{}{}{
   \small Creation of a Docker image for the \textit{taiga.io} software. TaigaIO is a simplified tool for task management oriented to Agile methods.
+  \bigskip
+}
+\cventry{2017}{Docker image for Azkaban}{}{}{}{
+  \small Creatiof of a Docker image for the \textit{Azkaban} software. Azkaban is a workflow manager developed by LinkedIn.
   \bigskip
 }
 \cventry{2015}{Personal Server}{}{}{}{
@@ -242,7 +305,7 @@
 \vspace{0.5cm}
 \section{Interests}
 \cvline{IT}{Free and open source softwares, functionnal programming.}
-\cvline{Hobbies}{Salsa and other danses, Tech watch, Photography.}
+\cvline{Hobbies}{Salsa and other danses, Paragliding, Photography, Geopolitics, Good food.}
 \cvline{Travels}{17 years in Libreville (Gabon), Road trips in Europe (11 countries), 4 months in India.}
 
 \closesection{}                   % needed to renewcommands
