--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -92,8 +92,8 @@ mathématiques sous jacents, ainsi que plusieurs travaux pratiques.
   \hspace{0.1cm} Langages & \hspace{0.5cm} \textbf{Scala}, Java, JavaScript, Bash (bases) \\ \vspace{0.1cm}
   \hspace{0.1cm} Ecosystème Big Data & \hspace{0.5cm} \textbf{Spark}, Kafka, HDFS, Cloudera Platform \\ \vspace{0.1cm}
   \hspace{0.1cm} Ecosystème Scala & \hspace{0.5cm} Play 2!, Akka (bases) \\ \vspace{0.1cm}
-  \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git \\ \vspace{0.1cm}
-  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} Cassandra, MongoDB \\ \vspace{0.1cm}
+  \hspace{0.1cm} Intégration & \hspace{0.5cm} SBT, Maven, Jenkins, Git, GitlabCI \\ \vspace{0.1cm}
+  \hspace{0.1cm} Bases de Données & \hspace{0.5cm} Cassandra, MongoDB, HBase (bases) \\ \vspace{0.1cm}
   \hspace{0.1cm} Administration & \hspace{0.5cm} GNU/Linux, Ansible, Docker, Vagrant \\ \vspace{0.1cm}
 	\hspace{0.1cm} Cloud Computing & \hspace{0.5cm} Microsoft Azure \\ \vspace{0.1cm}
 \end{tabular}
@@ -296,11 +296,11 @@ mathématiques sous jacents, ainsi que plusieurs travaux pratiques.
 \newpage
 \section{Projets personnels}
 \cventry{2019}{Spark Tools}{}{}{}{
-  \small Développement d'un SourceManager pour abstraire la lecture/écriture de source et la création d'une table Hive. Ajoute plusieurs SaveMode très pratiques.
+  \small Développement d'un SourceManager pour abstraire la lecture/écriture de sources et la création d'une table Hive. Ajoute plusieurs SaveMode très pratiques.
   \bigskip
 }
 \cventry{2018}{Slack Notifier}{}{}{}{
-  \small Développement d'un outil de notification Slack spécialisé pour les jobs Spark.
+  \small Développement d'un outil simple de notification implémentant l'API Incoming Webhooks de Slack, et spécialisé pour les jobs Spark.
   \bigskip
 }
 \cventry{2017}{Image Docker pour TaigaIO}{}{}{}{
@@ -308,7 +308,7 @@ mathématiques sous jacents, ainsi que plusieurs travaux pratiques.
   \bigskip
 }
 \cventry{2017}{Image Docker pour Azkaban}{}{}{}{
-  \small Création d'une image Docker pour le logiciel \textit{Azkaban}. Azkban est un gestionnaire de workflow pratique développé par LinkedIn.
+  \small Création d'une image Docker pour le logiciel \textit{Azkaban}. Azkaban est un gestionnaire de workflow pratique développé par LinkedIn.
   \bigskip
 }
 \cventry{2015}{Serveur Personnel}{}{}{}{
@@ -322,7 +322,7 @@ mathématiques sous jacents, ainsi que plusieurs travaux pratiques.
 
 \section{Centres d'intérêt}
 \cvline{Informatique}{Logiciels libres, Big Data.}
-\cvline{Loisirs}{Salsa et autres danses, Photographie, Géopolitique, Bonnes pitances...}
+\cvline{Loisirs}{Salsa et autres danses, Parapente, Photographie, Géopolitique, Bonnes pitances...}
 \cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (11 pays), 4 mois en Inde, 1 an à Montréal.}
 
 \closesection{}                   % needed to renewcommands
